--- a/www/index.html
+++ b/www/index.html
@@ -32,9 +32,11 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
+      <script src="js/services.js"></script>
   </head>
 
-  <body ng-app="starter">
+   <body ng-app="conFusion">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
